[package]
name = "libp2p-learner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.52", features = ["full"]}
futures = { version = "0.3"}
tokio = { version = "1.33", features = ["full"]} 
anyhow = "1.0.75"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
tracing-error = "0.2.0"
